@@ -1,3 +1,6 @@
+22 September 2014: Wouter
+	- Fix swig and python examples for Python 3.x.
+
 19 September 2014: Wouter
 	- improve python configuration detection to build on Fedora 22.
 
